# scratchTable

./: .dockerignore  .gitignore  README.md  docker-compose.yml  dockerfile  index.html  package-lock.json  package.json  svelte.config.js  tauri.conf.json  tree.txt  vite.config.js
src/: App.svelte
src-tauri/: Cargo.toml
src-tauri/src/: main.rs
src/components/: Spreadsheet.svelte
src/lib/: FormulaEngine.js
