[package]
name = "scratchtable"
version = "0.1.0"
description = "A lightweight desktop spreadsheet app"
authors = ["johnnythrash"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "scratchtable"
path = "src/main.rs"
